Fixing the CSS for the menu bar. It should now look more like the older OVMS version. Also, the CSS was split across two files: menu.css and fisma.css, which created some overlap. I separated it out and put it all into menu.css and also added some comments.

--- a/public/stylesheets/fisma.css
+++ b/public/stylesheets/fisma.css
@@ -1,3 +1,16 @@
+/**
+ * fisma.css
+ *
+ * Contains most of the styles that are used in the OpenFIMSA web site. The main.css
+ * file also does some of the work. I'd like to clean up these files and make them
+ * more modular so that they are easier to maintain.
+ *
+ * @author      Unknown
+ * @todo        Cleanup and assign author
+ * @copyright   (c) 2008 Endeavor Systems, Inc. (http://www.endeavorsystems.com)
+ * @license     http://www.openfisma.org/mw/index.php?title=License
+ */
+
 a.action {
     text-decoration : none;
     line-height : 2em;
@@ -64,44 +77,6 @@ ul.linwise li {
 
 ul.loginfo {
     font: 0.8em arial, helvetica, sans-serif;
-}
-
-#menu a, #menu h2{
-    display: block;
-    margin: 0px;
-    padding: 0px;
-}
-
-#menu h2 {
-    border-width: 1px;
-    border-style: solid;
-    border-color: #42637B #888 #42637B #bbb;
-}
-
-#menu h2 a {
-    font: bold 12px arial, helvetica, sans-serif;
-    text-align: center;
-    line-height: 1.8em;
-}
-
-#menu a {
-    font: 12px arial, helvetica, sans-serif;
-    color: white;
-    line-height:1.4em;
-    background: #42637B;
-    text-decoration: none;
-    border-bottom:1px solid gray;
-}
-
-#menu ul ul a{
-    background: #42637B url(../images/plus.gif) no-repeat 0.6em ;
-    border-bottom:1px solid gray;
-    padding:1px 1em 0px 1.8em;
-}
-#menu ul ul a:hover {
-    color: #42637B;
-    background: #FFFFB5 url(../images/arrow.gif) no-repeat 0.6em ;
-    padding:1px 1em 0em 1.8em;
 }
 
 ul.stitle li{
